testcases/neg/type/fun_error_in_body.bard
let fun f() = true + 2
in
    42
end
